CREATE SCHEMA IF NOT EXISTS gebrauchtwagen AUTHORIZATION gebrauchtwagen;

ALTER ROLE gebrauchtwagen SET search_path = 'gebrauchtwagen';

DO $$
BEGIN
    CREATE TYPE gebrauchtwagen.kraftstoffart AS ENUM (
        'BENZIN',
        'DIESEL',
        'ELEKTRO',
        'HYBRID',
        'ERDGAS',
        'WASSERSTOFF'
    );
EXCEPTION
    WHEN duplicate_object THEN NULL;
END
$$;

DO $$
BEGIN
    CREATE TYPE gebrauchtwagen.fahrzeugklasse AS ENUM (
        'KLEINWAGEN',
        'KOMPAKTKLASSE',
        'MITTELKLASSE',
        'OBERKLASSE',
        'SUV',
        'KOMBI',
        'CABRIO',
        'TRANSPORTER'
    );
EXCEPTION
    WHEN duplicate_object THEN NULL;
END
$$;

DO $$
BEGIN
    CREATE TYPE gebrauchtwagen.hu_status AS ENUM (
        'BESTANDEN',
        'NICHT_BESTANDEN',
        'AUSSTEHEND'
    );
EXCEPTION
    WHEN duplicate_object THEN NULL;
END
$$;

CREATE TABLE IF NOT EXISTS gebrauchtwagen.gebrauchtwagen (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    version integer NOT NULL DEFAULT 1,
    fin varchar(17) NOT NULL UNIQUE,
    marke varchar(100) NOT NULL,
    modell varchar(100) NOT NULL,
    baujahr integer NOT NULL,
    erstzulassung date NOT NULL,
    kilometerstand integer NOT NULL CHECK (kilometerstand >= 0),
    kraftstoffart gebrauchtwagen.kraftstoffart NOT NULL,
    fahrzeugklasse gebrauchtwagen.fahrzeugklasse NOT NULL,
    ausstattung jsonb NOT NULL DEFAULT '{}'::jsonb,
    schadenfrei boolean NOT NULL,
    beschreibung_url varchar(255),
    anbieter_username varchar(100),
    kontakt_email varchar(255),
    erzeugt timestamp NOT NULL DEFAULT CURRENT_TIMESTAMP,
    aktualisiert timestamp NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE IF NOT EXISTS gebrauchtwagen.standort (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    plz varchar(10) NOT NULL,
    ort varchar(100) NOT NULL,
    gebrauchtwagen_id integer NOT NULL UNIQUE
        REFERENCES gebrauchtwagen.gebrauchtwagen(id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS gebrauchtwagen.schaden (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    bezeichnung varchar(100) NOT NULL,
    beschreibung varchar(500) NOT NULL,
    feststellungsdatum date NOT NULL,
    gebrauchtwagen_id integer NOT NULL
        REFERENCES gebrauchtwagen.gebrauchtwagen(id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS gebrauchtwagen.hauptuntersuchung (
    id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    pruefdatum date NOT NULL,
    gueltig_bis date NOT NULL,
    prueforganisation varchar(100) NOT NULL,
    status gebrauchtwagen.hu_status NOT NULL,
    gebrauchtwagen_id integer NOT NULL UNIQUE
        REFERENCES gebrauchtwagen.gebrauchtwagen(id) ON DELETE CASCADE
);
